# NNCL2

./: .gitignore  Book1.csv  Book1.xlsx  pyproject.toml  results_TestL.csv  results_TestP.csv
.claude/: settings.local.json
legacy/non_neg/: .gitignore  SCRIPTS.md  SEPIN_discrepancy.md  create_imagenet100.py  main.py  main_disent.py  main_eval2.py  make_args_json.py  pyproject.toml
legacy/non_neg/trained_models/simclr/CIFAR100-CL/eval2_metrics/: metrics_0199.npz
legacy/non_neg/trained_models/simclr/CIFAR100-NCL/eval2_metrics/: metrics_0199.npz
legacy/non_neg/trained_models/simclr/ImageNet100-CL/eval2_metrics/: metrics_0199.npz
legacy/non_neg/trained_models/simclr/ImageNet100-NCL/eval2_metrics/: metrics_0199.npz
legacy/non_neg/trained_models/simclr/hywyrz38/eval2_metrics/: metrics_0199.npz
legacy/non_neg/trained_models/simclr/mc1wv5je/eval2_metrics/: metrics_0199.npz
presentation/: make_slides.py  slides.pptx
presentation/1/: Book1.xlsx  a.txt
presentation/2/: a.xlsx  todo.txt
presentation/3/: eval_combined.csv  eval_combined.xlsx  make_slides.py  slides.pptx
presentation/4/: a.txt
src/: aggregate_eval.py  analyze.py  compare.py  dataset.py  diagram.py  diagram_variant.py  evaluator.py  logger.py  losses.py  main.py  main_eval.py  main_eval2.py  main_train.py  model.py  plot_histogram.py  plot_structure.py  visualize.py  viz_eval2.py
src/tools/: diagram.py  diagram_variant.py  summary.py  visualize.py
tools/: model_diagram.py  model_diagram_no_l1.py  results_table.py
