[project]
name = "non-neg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "hydra-core>=1.3.2",
    "lightning-bolts>=0.5.0",
    "pytorch-lightning==1.6.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "timm>=1.0.26",
    "torch>=1.10.0",
    "torchmetrics==0.6.0",
    "torchvision>=0.11.1",
    "tqdm>=4.67.3",
    "wandb>=0.25.0",
]
