[project]
name = "non-neg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "setuptools==68.2.2",
    "wheel>=0.46.3",
    "six",
    "h5py",
    "einops>=0.8.2",
    "hydra-core>=1.3.2",
    "lightning-bolts==0.5.0",
    "pytorch-lightning==1.6.4",
    "scikit-learn>=1.4.0",
    "scipy>=1.10.0",
    "timm>=0.6.0,<0.9.0",
    "torch==1.13.1",
    "torchmetrics==0.6.0",
    "torchvision==0.14.1",
    "tqdm>=4.67.3",
    "umap-learn",
    "wandb>=0.25.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools==68.2.2", "wheel"]
build-backend = "setuptools.build_meta"
